--- a/estadios.html
+++ b/estadios.html
@@ -6,16 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Estádios</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <header>
         <div class="center">
-            <div class="logo"><img alt="Imagem da logo da Copa do Mundo de 2022" src="img/fifa logo 3.png"></div><!--logo-->
+            <div class="logo"><img alt="Imagem da logo da Copa do Mundo de 2022" src="./img/fifa logo 3.png"></div><!--logo-->
             <div class="menu">
                 <a href="index.html" target="_self">Página Inicial</a>
-                <a href="selecoes.html" target="_self">Seleções</a>
+                <div class="dropdown"><!--Dropdown Seleções-->
+                    <a id="drop-sel" href="selecoes.html" target="_self">Seleções</a>
+                    <div class="dropdown-content">
+                        <a href="grupoa.html">Grupo A</a>
+                        <a href="grupob.html">Grupo B</a>
+                        <a href="grupoc.html">Grupo C</a>
+                    </div>
+                </div>
                 <a href="estadios.html" target="_self">Estádios</a>
                 <a href="grupos.html" target="_self">Grupos</a>
             </div><!--menu-->
