--- a/index.html
+++ b/index.html
@@ -6,16 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Copa do Mundo 2022</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <header>
         <div class="center">
-            <div class="logo"><img alt="Imagem da logo da Copa do Mundo de 2022" src="img/fifa logo 3.png"></div><!--logo-->
+            <div class="logo"><img alt="Imagem da logo da Copa do Mundo de 2022" src="./img/fifa logo 3.png"></div><!--logo-->
             <div class="menu">
                 <a href="index.html" target="_self">Página Inicial</a>
-                <a href="selecoes.html" target="_self">Seleções</a>
+                <div class="dropdown"><!--Dropdown Seleções-->
+                    <a id="drop-sel" href="selecoes.html" target="_self">Seleções</a>
+                    <div class="dropdown-content">
+                        <a href="grupoa.html">Grupo A</a>
+                        <a href="grupob.html">Grupo B</a>
+                        <a href="grupoc.html">Grupo C</a>
+                    </div>
+                </div>
                 <a href="estadios.html" target="_self">Estádios</a>
                 <a href="grupos.html" target="_self">Grupos</a>
             </div><!--menu-->
@@ -46,7 +53,7 @@
                         Esse evento é a maior e mais importante competição de futebol organizada pela FIFA e, atualmente, é composto por 32 seleções.
                         <br>
                     <p>A Copa do Mundo aconteceu pela primeira vez em 1930, no Uruguai.</p>
-                    <img class="copa1930" alt="jogadores em campo na Copa do Mundo de 1930" src="img/copa1930.jpg">
+                    <img class="copa1930" alt="jogadores em campo na Copa do Mundo de 1930" src="./img/copa1930.jpg">
                     </p>
 
                 </div><!--div center-inicial-->
@@ -55,7 +62,7 @@
 
         <article>
             <div>
-                <img src="/img/trofeu copa.png" alt="Troféu da Copa do Mundo" style="margin-top: 100px; margin-left: 150px;">
+                <img src="./img/trofeu copa.png" alt="Troféu da Copa do Mundo" style="margin-top: 100px; margin-left: 150px;">
             </div>
 
 
