--- a/selecoes.html
+++ b/selecoes.html
@@ -33,7 +33,7 @@
     <main>
         <div class="center">
             <div class="center-inicial">
-                <h1>Oito seleções que participarão da Copa de 2022</h1>
+                <h1>Doze seleções que participarão da Copa de 2022</h1>
 
 
             </div><!--div center-inicial-->
