--- a/grupos.html
+++ b/grupos.html
@@ -32,7 +32,7 @@
     <main>
         <div class="center">
             <div class="center-inicial">
-                <h1>Dois grupos de seleções que se enfretarão na Copa de 2022</h1>
+                <h1>Três grupos de seleções que se enfretarão na Copa de 2022</h1>
 
 
             </div><!--div center-inicial-->
