--- a/estadios.html
+++ b/estadios.html
@@ -32,7 +32,7 @@
     <main>
         <div class="center">
             <div class="center-inicial">
-                <h1>Quatro Estádios que terão jogos da Copa de 2022</h1>
+                <h1>Seis Estádios que terão jogos da Copa de 2022</h1>
 
 
             </div><!--div center-inicial-->
