--- a/index.html
+++ b/index.html
@@ -36,24 +36,20 @@
                 <div class="center-inicial">
                     <h1>Um pouco sobre o Qatar: o país da Copa do Mundo de 2022</h1>
                     <p>
-                        O país fica na península arábica na Ásia Continental, corresponde a uma área de
-                        aproximadamente 11.610 km2 até o norte do Golfo Pérsico. O Catar faz fronteira com a Arábia
-                        Saudita
-                        e é separado por um estreito do Golfo Pérsico do país Bahrein.
+                        O país fica na península arábica na Ásia Continental, corresponde a uma área de aproximadamente 11.610 km2 até o norte do Golfo Pérsico. O Catar faz fronteira com a Arábia Saudita e é separado por um estreito do Golfo Pérsico do país Bahrein.
                     </p>
                     <p>A população do Qatar é de aproximadamente 2.743.901 habitantes.</p>
                     <p>O país emergiu como potência, quando sua economia foi impulsionada pela exploração do petróleo. A
                         exportação de petróleo e gás natural correspondem juntos a 50% do Produto Interno Bruto do país.
-                        O
-                        campo petrolífero mudou todo o cenário do país, sendo, hoje, considerado um dos mais ricos do
+                        O campo petrolífero mudou todo o cenário do país, sendo, hoje, considerado um dos mais ricos do
                         mundo.
                     </p>
                     <h1>Copa do Mundo</h1>
                     <p>
                         Esse evento é a maior e mais importante competição de futebol organizada pela FIFA e, atualmente, é composto por 32 seleções.
                         <br>
-                    <p>A Copa do Mundo aconteceu pela primeira vez em 1930, no Uruguai.</p>
-                    <img class="copa1930" alt="jogadores em campo na Copa do Mundo de 1930" src="./img/copa1930.jpg">
+                        <p>A Copa do Mundo aconteceu pela primeira vez em 1930, no Uruguai.</p>
+                        <img class="copa1930" alt="jogadores em campo na Copa do Mundo de 1930" src="./img/copa1930.jpg">
                     </p>
 
                 </div><!--div center-inicial-->
@@ -64,8 +60,6 @@
             <div>
                 <img src="./img/trofeu copa.png" alt="Troféu da Copa do Mundo" style="margin-top: 100px; margin-left: 150px;">
             </div>
-
-
         </article>
     </main>
 </body>
