--- a/selecoes.html
+++ b/selecoes.html
@@ -28,9 +28,9 @@
                 <div class="dropdown"><!--Dropdown Seleções-->
                     <a id="drop-sel" href="selecoes.html" target="_self">Seleções</a>
                     <div class="dropdown-content">
-                        <a href="grupoa.html">Grupo A</a>
-                        <a href="grupob.html">Grupo B</a>
-                        <a href="grupoc.html">Grupo C</a>
+                        <a href="#grupoA">Grupo A</a>
+                        <a href="#grupoB">Grupo B</a>
+                        <a href="#grupoC">Grupo C</a>
                     </div>
                 </div>
                 <a href="estadios.html" target="_self">Estádios</a>
@@ -51,6 +51,11 @@
                     <br>
 
                     <h3 class="h3-sel">CATAR</h3>
+
+                    <!--Espaço vazio para direcionamento através da navegação da header-->
+                    <span class="anchor" id="grupoA"></span>
+                    <div class="section"></div>
+
                     <div class="sbs"><!--sbs = Side by Side-->
                         <img class="tec-imgs" src="./img/tec-sanchez.webp">
                         <p class="p-sel">
@@ -175,6 +180,10 @@
                             teste
                         </p>
                         <br>
+                        <!--Espaço vazio para direcionamento através da navegação da header-->
+                        <span class="anchor" id="grupoB"></span> 
+                        <div class="section"></div>
+
                     </div>
                     <p class="p-tecnicos">Técnico</p>
                     <br>
