--- a/estadios.html
+++ b/estadios.html
@@ -10,25 +10,31 @@
 </head>
 
 <body>
-    <header>
-        <div class="center">
-            <div class="logo"><img alt="Imagem da logo da Copa do Mundo de 2022" src="./img/fifa logo 3.png"></div><!--logo-->
-            <div class="menu">
-                <a href="index.html" target="_self">Página Inicial</a>
-                <div class="dropdown"><!--Dropdown Seleções-->
-                    <a id="drop-sel" href="selecoes.html" target="_self">Seleções</a>
-                    <div class="dropdown-content">
-                        <a href="grupoa.html">Grupo A</a>
-                        <a href="grupob.html">Grupo B</a>
-                        <a href="grupoc.html">Grupo C</a>
+    <header id="header">          
+        <div class="menu">
+            <div class="header">
+                <nav>
+                    <img class="logo" alt="Imagem da logo da Copa do Mundo de 2022" src="./img/fwc qatar logo.png">
+                    <div class="nav-header">
+                        <ul class="nav-links">
+                            <li><a href="index.html" target="_self">Página Inicial</a></li>
+                            <div class="dropdown"><!--Dropdown Seleções-->
+                            <li><a id="drop-sel" href="selecoes.html" target="_self">Seleções</a></li>
+                                <div class="dropdown-content">
+                                    <a href="#grupoA">Grupo A</a>
+                                    <a href="#grupoB">Grupo B</a>
+                                    <a href="#grupoC">Grupo C</a>
+                                </div>
+                            </div>                                          
+                            <li><a href="estadios.html" target="_self">Estádios</a></li>
+                            <li><a href="grupos.html" target="_self">Grupos</a></li>
+                        </ul>
                     </div>
-                </div>
-                <a href="estadios.html" target="_self">Estádios</a>
-                <a href="grupos.html" target="_self">Grupos</a>
-            </div><!--menu-->
-            
-        </div><!--center-->
+                </nav>
+            </div>
+        </div><!--menu-->
     </header>
+    
     <main>
         <div class="center">
             <div class="center-inicial">
