--- a/grupos.html
+++ b/grupos.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Grupos</title>
     <link rel="stylesheet" href="./css/style.css">
+    <!--Source das fontes-->
+    <link rel="stylesheet" href="https://use.typekit.net/srv4abh.css">
 </head>
 
 <body>
@@ -45,5 +47,19 @@
         </div><!--center-->
     
     </main>
+    <footer>
+        <div class="footer">
+            <img id="senac-logo-footer" src="./img/senac-logo-white.png">
+            <ol class="ol-footer">
+                <li><a href="#">Gustavo Bessa</li></a>
+                <li><a href="#">Jéssica Simas</li></a>
+                <li><a href="#">Rafael Moreira</li></a>
+                <li><a href="https://www.github.com/vnxcius" target="_blank">Vinícius Simon</li></a>
+            </ol>   
+        </div>
+        <hr id="hr-footer">
+        <p class="p-footer">&copy; Faculdade Senac DF 2022</p>
+    </footer>
+    <script src="./js/script.js"></script>
 </body>
 </html>
