--- a/selecoes.html
+++ b/selecoes.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="./css/style.css">
     <!--Source das fontes-->
     <link rel="stylesheet" href="https://use.typekit.net/srv4abh.css">
-    <!--js para mostrar tabelas-->
     
 </head>
 
@@ -275,16 +274,16 @@
     </main>
 <footer>
     <div class="footer">
-        <img id="senac-logo-footer" src="./img/senac-logo.png">
+        <img id="senac-logo-footer" src="./img/senac-logo-white.png">
         <ol class="ol-footer">
-            <li>Gustavo Bessa</li>
-            <li>Jéssica Simas</li>
-            <li>Rafael Moreira</li>
-            <li>Vinícius Simon</li>
-        </ol>
+            <li><a href="#">Gustavo Bessa</li></a>
+            <li><a href="#">Jéssica Simas</li></a>
+            <li><a href="#">Rafael Moreira</li></a>
+            <li><a href="https://www.github.com/vnxcius" target="_blank">Vinícius Simon</li></a>
+        </ol>   
     </div>
-    <hr>
-    <p class="p-footer">&copy; Senac DF 2022</p>
+    <hr id="hr-footer">
+    <p class="p-footer">&copy; Faculdade Senac DF 2022</p>
 </footer>
 <script src="./js/script.js"></script>
 </body>
