--- a/estadios.html
+++ b/estadios.html
@@ -51,9 +51,9 @@
         <div class="footer">
             <img id="senac-logo-footer" src="./img/senac-logo-white.png">
             <ol class="ol-footer">
-                <li><a href="#">Gustavo Bessa</li></a>
-                <li><a href="#">Jéssica Simas</li></a>
-                <li><a href="#">Rafael Moreira</li></a>
+                <li><a href="https://www.github.com/dkcypher">Gustavo Bessa</li></a>
+                <li><a href="https://www.github.com/jessisimas">Jéssica Simas</li></a>
+                <li><a href="https://www.github.com/raflikmoreira">Rafael Moreira</li></a>
                 <li><a href="https://www.github.com/vnxcius" target="_blank">Vinícius Simon</li></a>
             </ol>   
         </div>
