--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
         <aside>
             <div class="center">
                 <div class="center-inicial">
-                    <h1>Um pouco sobre o Qatar: o país da Copa do Mundo de 2022</h1>
+                    <h1>Um pouco sobre o Catar: o país da Copa do Mundo de 2022</h1>
                     <p>
                         O país fica na península arábica na Ásia Continental, corresponde a uma área de aproximadamente 11.610 km2 até o norte do Golfo Pérsico. O Catar faz fronteira com a Arábia Saudita e é separado por um estreito do Golfo Pérsico do país Bahrein.
                     </p>
-                    <p>A população do Qatar é de aproximadamente 2.743.901 habitantes.</p>
+                    <p>A população do Catar é de aproximadamente 2.743.901 habitantes.</p>
                     <p>O país emergiu como potência, quando sua economia foi impulsionada pela exploração do petróleo. A
                         exportação de petróleo e gás natural correspondem juntos a 50% do Produto Interno Bruto do país. Além disso, o país exporta também: petrolíferos refinados e polímeros de etileno.</p>
                   
