--- a/selecoes.html
+++ b/selecoes.html
@@ -112,8 +112,8 @@
                     <a class="button-style" id="toggleTableDisplay" onclick="toggleTable();" href="javascript:void(0)">MOSTRAR TABELA</a>                   
                     <div>
                         <br>
-                        <table id="table-sel" style="display: none" border="1">
-                            <tr><th colspan="4">TABELA DE JOGOS GRUPO A</th></tr>
+                        <table id="table-sel"  border="1">
+                            <tr><th colspan="5">TABELA DE JOGOS GRUPO A</th></tr>
                             <tr>
                                 <th>TIMES</th>
                                 <th>ADVERSÁRIOS</th>
@@ -164,6 +164,84 @@
                             </tr>
                         </table>
                         <br>
+                    </div>
+                    <div>
+                        <table class="player-table" border="1">
+                            <tr><th colspan="4" style="background-color: black;">JOGADORES PRINCIPAIS</th></tr>
+                            <tr>
+                                <th id="catar">CATAR</th>
+                                <th id="equador">EQUADOR</th>
+                                <th id="senegal">SENEGAL</th>
+                                <th id="holanda">HOLANDA</th>
+                            </tr>
+                            <tr>
+                                <td>Saad Al Sheeb</td>
+                                <td>Hernán Galíndez</td>
+                                <td>Éduoard Mendy</td>
+                                <td>Justin Bijlow</td>
+                            </tr>
+                            <tr>
+                                <td>Bassam Alrawi</td>
+                                <td>Pervis Estupiñán</td>
+                                <td>Saliou Ciss</td>
+                                <td>Daley Blind</td>
+                            </tr>
+                            <tr>
+                                <td>Abdulkarim Hassan</td>
+                                <td>Piero Hincapié</td>
+                                <td>Abdou Diallo</td>
+                                <td>Matthijs de Ligt</td>
+                            </tr>
+                            <tr>
+                                <td>Boualem Khoukhi</td>
+                                <td>Ángelo Preciado</td>
+                                <td>Kalidou Koulibaly</td>
+                                <td>Stefan de Vrij</td>
+                            </tr>
+                            <tr>
+                                <td>Pedro Miguel</td>
+                                <td>Félix Torres</td>
+                                <td>Bouna Sarr</td>
+                                <td>Denzel Dumfries</td>
+                            </tr>
+                            <tr>
+                                <td>Tarek Salman</td>
+                                <td>Moisés Caicedo</td>
+                                <td>Idrissa Gueye</td>
+                                <td>Virgil van Dijk</td>
+                            </tr>
+                            <tr>
+                                <td>Karim Boudiaf</td>
+                                <td>Carlos Gruezo</td>
+                                <td>Cheikhou Kouyaté</td>
+                                <td>Frenkie de Jong</td>
+                            </tr>
+                            <tr>
+                                <td>Abdulaziz Hatem</td>
+                                <td>Michael Estrada</td>
+                                <td>Nampalys Mendy</td>
+                                <td>Davy Klaanssen</td>
+                            </tr>
+                            <tr>
+                                <td>Akram Hassan Afif</td>
+                                <td>Ángel Mena</td>
+                                <td>Boulaye Dia</td>
+                                <td>Georginio Wijnaldum</td>
+                            </tr>
+                            <tr>
+                                <td>Hasan Al-Haydos</td>
+                                <td>Ángel Mena</td>
+                                <td>Sadio Mané</td>
+                                <td>Steven Bergwijn</td>
+                            </tr>
+                            <tr>
+                                <td>Almoez Ali</td>
+                                <td>Enner Valencia</td>
+                                <td>Ismaïla Sarr</td>
+                                <td>Memphis Depay</td>
+                            </tr>
+
+                        </table>
                     </div>
                 </div>
                 </div><!--grupo a end-->
