--- a/grupos.html
+++ b/grupos.html
@@ -43,7 +43,138 @@
                 <h1>Três grupos de seleções que se enfretarão na Copa de 2022</h1>
                 <p>Alteração teste</p>
 
-                <h1>GRUPO A</h1>
+                <h1>GRUPO A
+                    <br>
+                    <br>
+                    <li>Catar</li>
+                    <li>Equador</li>
+                    <li>Senegal</li>
+                    <li>Holando</li>
+                <div>
+                    <br>
+                    <table id="grupos" border="1">
+                        <tr><th colspan="3">TABELA DE JOGOS GRUPO A</th></tr>
+                        <tr>
+                            <th>TIMES</th>
+                            <th>ESTÁDIO</th>
+                            <th>DATA/HORA</th>
+                        </tr>
+
+                        <tr>
+                            <td>Catar</td>
+                            <td>Al Bayt</td>
+                            <td>20/11 - 13h00</td>
+                        </tr>
+
+                        <tr>
+                            <td>Equador</td>
+                            <td>Al Thumana</td>
+                            <td>21/11 - 13h00</td>
+                        </tr>
+
+                        <tr>
+                            <td>Senegal</td>
+                            <td>Al Khalifa</td>
+                            <td>25/11 - 10h00</td>
+                        </tr>
+
+                        <tr>
+                            <td>Holanda</td>
+                            <td>Khalifa International</td>
+                            <td>25/11 - 13h00</td>
+                        </tr>
+
+                    </table>
+                </h1>
+        
+                <h1>GRUPO B
+                    <br>
+                    <br>
+                    <li>Inglaterra</li>
+                    <li>Irã</li>
+                    <li>EUA</li>
+                    <li>Páis de Gales</li>
+                    <br>
+                    <table id="grupos" border="1">
+                        <tr><th colspan="3">TABELA DE JOGOS GRUPO A</th></tr>
+                        <tr>
+                            <th>TIMES</th>
+                            <th>ESTÁDIO</th>
+                            <th>DATA/HORA</th>
+                        </tr>
+
+                        <tr>
+                            <td>Inglaterra</td>
+                            <td>Al Bayt</td>
+                            <td>20/11 - 13h00</td>
+                        </tr>
+
+                        <tr>
+                            <td>Irã</td>
+                            <td>Al Thumana</td>
+                            <td>21/11 - 13h00</td>
+                        </tr>
+
+                        <tr>
+                            <td>EUA</td>
+                            <td>Al Rayyan</td>
+                            <td>25/11 - 10h00</td>
+                        </tr>
+
+                        <tr>
+                            <td>País de Gales</td>
+                            <td>Khalifa International</td>
+                            <td>25/11 - 13h00</td>
+                        </tr>
+
+                    </table>
+                    </h1>
+                <h1>GRUPO C
+                    <br>
+                    <br>
+                     <li>Argentina</li>
+                    <li>Arábia Saudita</li>
+                    <li>México</li>
+                    <li>Polônia</li>
+                    <br>
+                    <table id="grupos" border="1">
+                        <tr><th colspan="3">TABELA DE JOGOS GRUPO A</th></tr>
+                        <tr>
+                            <th>TIMES</th>
+                            <th>ESTÁDIO</th>
+                            <th>DATA/HORA</th>
+                        </tr>
+
+                        <tr>
+                            <td>Argentina</td>
+                            <td>Nacional de Lusail</td>
+                            <td>20/11 - 13h00</td>
+                        </tr>
+
+                        <tr>
+                            <td>Arábia Saudita</td>
+                            <td>Education City</td>
+                            <td>21/11 - 13h00</td>
+                        </tr>
+
+                        <tr>
+                            <td>México</td>
+                            <td>Porto de Doha</td>
+                            <td>25/11 - 10h00</td>
+                        </tr>
+
+                        <tr>
+                            <td>Polônia</td>
+                            <td>Nacional de Lusail</td>
+                            <td>25/11 - 13h00</td>
+                        </tr>
+
+                    </table>
+                    </h1>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
 
             </div><!--div center-inicial-->
         </div><!--center-->
