--- a/grupos.html
+++ b/grupos.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <title>Grupos</title>
+    <title>QATAR 2022 | Grupos</title>
+    <link rel="icon" href="./img/fwc qatar.webp">
     <link rel="stylesheet" href="./css/style.css">
     <!--Source das fontes-->
     <link rel="stylesheet" href="https://use.typekit.net/srv4abh.css">
