--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <p>O campo petrolífero mudou todo o cenário do país, sendo, hoje, considerado um dos mais ricos do
                         mundo.</p>
                    
-                    <h1>Copa do Mundo: o início em 1930</h1>
+                    <h1>Copa do Mundo: o início e o atual</h1>
                     <p>
                         Esse evento é a maior e mais importante competição de futebol organizada pela FIFA e, atualmente, é composto por 32 seleções que de 4 em 4 anos se enfrentam para conquistar a taça da Copa.
                         <br>
