--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
         <article>
             <div>
-                <img src="./img/trofeu copa.png" alt="Troféu da Copa do Mundo" style="margin-top: 170px; margin-left: 100px; width: 85%;">
+                <img src="./img/trofeu copa.png" alt="Troféu atual da Copa do Mundo" style="margin-top: 170px; margin-left: 100px; width: 85%;">
             </div>
         </article>
     </main>
