--- a/grupos.html
+++ b/grupos.html
@@ -97,7 +97,7 @@
                     <li>Páis de Gales</li>
                     <br>
                     <table id="grupos" border="1">
-                        <tr><th colspan="3">TABELA DE JOGOS GRUPO A</th></tr>
+                        <tr><th colspan="3">TABELA DE JOGOS GRUPO B</th></tr>
                         <tr>
                             <th>TIMES</th>
                             <th>ESTÁDIO</th>
@@ -139,7 +139,7 @@
                     <li>Polônia</li>
                     <br>
                     <table id="grupos" border="1">
-                        <tr><th colspan="3">TABELA DE JOGOS GRUPO A</th></tr>
+                        <tr><th colspan="3">TABELA DE JOGOS GRUPO C</th></tr>
                         <tr>
                             <th>TIMES</th>
                             <th>ESTÁDIO</th>
