--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
     </header>
 
     <main>
+        <div class="main-text">
+            <p style="padding: 300px; text-align: center; position: relative;">BEM-VINDO AO QATAR 2022</p>
+        </div>
         <aside>
             <div class="center">
                 <div class="center-inicial">
@@ -65,13 +68,14 @@
 
                 </div><!--div center-inicial-->
             </div><!--center-->
+            <article>
+                <div>
+                    <img src="./img/trofeu copa.png" alt="Troféu atual da Copa do Mundo" style="margin-top: 170px; margin-left: 100px; width: 85%;">
+                </div>
+            </article>
         </aside>
 
-        <article>
-            <div>
-                <img src="./img/trofeu copa.png" alt="Troféu atual da Copa do Mundo" style="margin-top: 170px; margin-left: 100px; width: 85%;">
-            </div>
-        </article>
+
     </main>
     <footer>
         <div class="footer">
