--- a/selecoes.html
+++ b/selecoes.html
@@ -123,7 +123,7 @@
                             </tr>
 
                             <tr>
-                                <td>Catar</td>
+                                <td><img>Catar</td>
                                 <td>Equador</td>
                                 <td>Al Bayt</td>
                                 <td>20/11 - 13h00</td>
