--- a/grupos.html
+++ b/grupos.html
@@ -46,11 +46,13 @@
 
                 <h1>GRUPO A
                     <br>
-                    <br>
-                    <li>Catar</li>
-                    <li>Equador</li>
-                    <li>Senegal</li>
-                    <li>Holando</li>
+                    <br> 
+                    <ul class="listgrupo">
+                    <li><img src="./img/qatar-flag.png" style="width:2%;"> Catar</li>
+                    <li><img src="./img/equador-flag.png" style="width:2%;"> Equador</li>
+                    <li><img src="./img/senegal-flag.png" style="width:2%;"> Senegal</li>
+                    <li><img src="./img/holanda-flag.png" style="width:2%;"> Holando</li>
+                    </ul>
                 <div>
                     <br>
                     <table id="grupos" border="1">
@@ -91,11 +93,13 @@
                 <h1>GRUPO B
                     <br>
                     <br>
+                    <ul class="listgrupo">
                     <li>Inglaterra</li>
                     <li>Irã</li>
                     <li>EUA</li>
                     <li>Páis de Gales</li>
                     <br>
+                    </ul>
                     <table id="grupos" border="1">
                         <tr><th colspan="3">TABELA DE JOGOS GRUPO B</th></tr>
                         <tr>
@@ -133,11 +137,13 @@
                 <h1>GRUPO C
                     <br>
                     <br>
+                    <ul class="listgrupo">
                      <li>Argentina</li>
                     <li>Arábia Saudita</li>
                     <li>México</li>
                     <li>Polônia</li>
                     <br>
+                    </ul>
                     <table id="grupos" border="1">
                         <tr><th colspan="3">TABELA DE JOGOS GRUPO C</th></tr>
                         <tr>
