--- a/grupos.html
+++ b/grupos.html
@@ -61,10 +61,11 @@
                             <th>TIMES</th>
                             <th>ESTÁDIO</th>
                             <th>DATA/HORA</th>
+
                         </tr>
 
                         <tr>
-                            <td>Catar</td>
+                            <td><img src="./img/bandcatar.jfif" style="width: 10%;"> Catar</td>
                             <td>Al Bayt</td>
                             <td>20/11 - 13h00</td>
                         </tr>
