centralizar grupos.html

--- a/grupos.html
+++ b/grupos.html
@@ -39,7 +39,7 @@
     </header>
 
     <main>
-        <div class="center">
+        <div class="main-pg-default">
             <div class="center-inicial">
                 <h1>Três grupos de seleções que se enfretarão na Copa de 2022</h1>
                 <p>Alteração teste</p>
@@ -48,12 +48,12 @@
                     <br>
                     <br> 
                     <ul class="listgrupo">
-                    <li><img src="./img/qatar-flag.png" style="width:2%;"> Catar</li>
-                    <li><img src="./img/equador-flag.png" style="width:2%;"> Equador</li>
-                    <li><img src="./img/senegal-flag.png" style="width:2%;"> Senegal</li>
-                    <li><img src="./img/holanda-flag.png" style="width:2%;"> Holando</li>
+                        <li><img src="./img/qatar-flag.png" style="width:2%;"> Catar</li>
+                        <li><img src="./img/equador-flag.png" style="width:2%;"> Equador</li>
+                        <li><img src="./img/senegal-flag.png" style="width:2%;"> Senegal</li>
+                        <li><img src="./img/holanda-flag.png" style="width:2%;"> Holando</li>
                     </ul>
-                <div>
+                <div>  
                     <br>
                     <table id="grupos" border="1">
                         <tr><th colspan="3">TABELA DE JOGOS GRUPO A</th></tr>
