--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     </header>
 
     <main>
-        <div class="main-text">
-            <p style="padding: 300px; text-align: center; position: relative;">BEM-VINDO AO QATAR 2022</p>
+        <div>
+            <img class="main-text" src="./img/img-index.png">
         </div>
         <aside>
             <div class="center">
