--- a/grupos.html
+++ b/grupos.html
@@ -42,7 +42,7 @@
         <div class="main-pg-default">
             <div class="center-inicial">
                 <h1>Três grupos de seleções que se enfretarão na Copa de 2022</h1>
-                <p>Alteração teste</p>
+                
 
                 <h1>GRUPO A
                     <br>
@@ -65,7 +65,7 @@
                         </tr>
 
                         <tr>
-                            <td><img src="./img/bandcatar.jfif" style="width: 10%;"> Catar</td>
+                            <td>Catar</td>
                             <td>Al Bayt</td>
                             <td>20/11 - 13h00</td>
                         </tr>
@@ -95,10 +95,10 @@
                     <br>
                     <br>
                     <ul class="listgrupo">
-                    <li>Inglaterra</li>
-                    <li>Irã</li>
-                    <li>EUA</li>
-                    <li>Páis de Gales</li>
+                    <li><img src="./img/iglaterra-flag.png" style="width:2%;">  Inglaterra</li>
+                    <li><img src="./img/ira-flag.png" style="width:2%;">  Irã</li>
+                    <li><img src="./img/eua-flag.png" style="width:2%;">  EUA</li>
+                    <li><img src="./img/gales-flag.png" style="width:2%;">  Páis de Gales</li>
                     <br>
                     </ul>
                     <table id="grupos" border="1">
@@ -139,10 +139,10 @@
                     <br>
                     <br>
                     <ul class="listgrupo">
-                     <li>Argentina</li>
-                    <li>Arábia Saudita</li>
-                    <li>México</li>
-                    <li>Polônia</li>
+                     <li><img src="./img/argentina-flag.png" style="width:2%;">  Argentina</li>
+                    <li><img src="./img/arabia-flag.png" style="width:2%;">  Arábia Saudita</li>
+                    <li><img src="./img/mexico-flag.png" style="width:2%;">  México</li>
+                    <li><img src="./img/polonia-flag.png" style="width:2%;">  Polônia</li>
                     <br>
                     </ul>
                     <table id="grupos" border="1">
