--- a/grupos.html
+++ b/grupos.html
@@ -51,7 +51,7 @@
                         <li><img src="./img/qatar-flag.png" style="width:2%;"> Catar</li>
                         <li><img src="./img/equador-flag.png" style="width:2%;"> Equador</li>
                         <li><img src="./img/senegal-flag.png" style="width:2%;"> Senegal</li>
-                        <li><img src="./img/holanda-flag.png" style="width:2%;"> Holando</li>
+                        <li><img src="./img/holanda-flag.png" style="width:2%;"> Holanda</li>
                     </ul>
                 <div>  
                     <br>
@@ -95,7 +95,7 @@
                     <br>
                     <br>
                     <ul class="listgrupo">
-                    <li><img src="./img/iglaterra-flag.png" style="width:2%;">  Inglaterra</li>
+                    <li><img src="./img/inglaterra-flag.png" style="width:2%;">  Inglaterra</li>
                     <li><img src="./img/ira-flag.png" style="width:2%;">  Irã</li>
                     <li><img src="./img/eua-flag.png" style="width:2%;">  EUA</li>
                     <li><img src="./img/gales-flag.png" style="width:2%;">  Páis de Gales</li>
