--- a/estadios.html
+++ b/estadios.html
@@ -38,7 +38,7 @@
         </div><!--menu-->
     </header>
     
-    <main>
+    <main class="main-pg-default">
         <div class="center">
             <div>
               
