modified:   css/style.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     </header>
 
     <main>
-        <div>
-            <img class="main-text" src="./img/img-index.png">
+        <div class="div-index">
+
         </div>
         <aside>
             <div class="center">
