bandeirinhas argentina e méxico
consegui arrumar as bandeirinhas da argentina e do méxico (fundo transparente) da área "grupos" e aumentei bem pouquinho a de gales pq tava um pouco menor q as outras

--- a/grupos.html
+++ b/grupos.html
@@ -98,7 +98,7 @@
                     <li><img src="./img/inglaterra-flag.png" style="width:2%;">  Inglaterra</li>
                     <li><img src="./img/ira-flag.png" style="width:2%;">  Irã</li>
                     <li><img src="./img/eua-flag.png" style="width:2%;">  EUA</li>
-                    <li><img src="./img/gales-flag.png" style="width:2%;">  Páis de Gales</li>
+                    <li><img src="./img/gales-flag.png" style="width:2.2%;">  Páis de Gales</li>
                     <br>
                     </ul>
                     <table id="grupos" border="1">
@@ -139,9 +139,9 @@
                     <br>
                     <br>
                     <ul class="listgrupo">
-                     <li><img src="./img/argentina-flag.png" style="width:2%;">  Argentina</li>
+                     <li><img src="./img/flag_argentina.png" style="width:2%;">  Argentina</li>
                     <li><img src="./img/arabia-flag.png" style="width:2%;">  Arábia Saudita</li>
-                    <li><img src="./img/mexico-flag.png" style="width:2%;">  México</li>
+                    <li><img src="./img/mexico-flag2.png" style="width:2%;">  México</li>
                     <li><img src="./img/polonia-flag.png" style="width:2%;">  Polônia</li>
                     <br>
                     </ul>
